src/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Actual_LOE__c</fullName>
        <description>Actual Level of Effort in Hours</description>
        <inlineHelpText>Actual Level of Effort in Hours</inlineHelpText>
        <label>Actual LOE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_LOE__c</fullName>
        <description>Estimated Level of Effort in Hours</description>
        <inlineHelpText>Estimated Level of Effort in Hours</inlineHelpText>
        <label>Estimated LOE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>IssueTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Completion_Date__c</fullName>
        <label>Task Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Priority__c</fullName>
        <label>Task Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Story__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_LOE__c</columns>
        <columns>Estimated_LOE__c</columns>
        <columns>Task_Completion_Date__c</columns>
        <columns>Task_Owner__c</columns>
        <columns>Task_Priority__c</columns>
        <columns>Task_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Progress_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Story__c</columns>
        <columns>Task_Completion_Date__c</columns>
        <columns>Task_Owner__c</columns>
        <columns>Task_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Task_Status__c</field>
            <operation>equals</operation>
            <value>Planned,In Progress</value>
        </filters>
        <label>In Progress Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tasks_without_Stories</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Task_Owner__c</columns>
        <columns>Task_Status__c</columns>
        <columns>Task_Completion_Date__c</columns>
        <columns>Estimated_LOE__c</columns>
        <columns>Actual_LOE__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Story__c</field>
            <operation>equals</operation>
        </filters>
        <label>Tasks without Stories</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>